tests/error/error19.jan
// error19: Usage of an array, which is not defined

x -> y;

z[0] += x
